--- a/articles.html
+++ b/articles.html
@@ -5,29 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Articles | Ninety-nine</title>
+    <meta name="description" content="Browse the list of articles published on Ninety-nine. Discover insights, reviews, and thoughtful notes.">
+    <meta name="keywords" content="Ninety-nine, articles, publishing, reviews, notes, blog">
+    <meta name="author" content="Ninety-nine">
 </head>
 
 <body>
     <header>
-        <a href="index.html">
-            <h1>Ninety-nine</h1>
-        </a>
+        <div style="text-align:center;">
+            <a href="index.html" style="text-decoration:none; color:inherit;">
+                <img src="public/logo.png" alt="Ninety-nine logo" style="height:60px; vertical-align:middle;" loading="lazy">
+                <h1 style="display:inline; margin-left:10px; text-decoration:underline;">Ninety-nine</h1>
+            </a>
+        </div>
+        <div style="text-align:center;">
+            <nav aria-label="Main navigation">
+                <ul style="border:1px solid #000; display:inline-block; padding:8px 16px; margin:0 auto; list-style:none; text-align:center;">
+                    <li style="display:inline;"><a href="index.html">Home</a></li>
+                    <li style="display:inline;"> | <a href="articles.html">Articles</a></li>
+                    <li style="display:inline;"> | <a href="books.html">Books</a></li>
+                    <li style="display:inline;"> | <a href="news-notes.html">News notes</a></li>
+                    <li style="display:inline;"> | <a href="about.html">About author</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <h2>Articles list</h2>
-        <p>
-        <ul>
-            <li><b><a href="article/12-03-2026-why-russian-messenger-max-is-bad.html">Why russian messenger "Max" is bad</a> | <small>[12-02-2026]</small></b></li>
-        </ul>
-        </p>
+        <section style="max-width:700px; margin:40px auto 0 auto; padding:0 16px;">
+            <header>
+                <h2>Articles List</h2>
+            </header>
+            <ul style="margin-top:20px;">
+                <li>
+                    <strong><a href="article/12-02-2026-the-other-side-of-uk.html">The other side of the UK</a></strong>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
-        <center>
-            <p>&copy; 2026 Ninety Nine. All rights reserved.
-                <br>
-                <img src="public/by-nc-sa.png" alt="Licensed under a Creative Commons Attribution-NoDerivatives 4.0 International License." height="16px;"> 
-            </p>
-        </center>
+        <div style="text-align:center; font-size:0.95em; margin-top:40px;">
+            <p>&copy; 2026 Ninety-nine. All rights reserved.</p>
+            <a href="https://creativecommons.org/licenses/by-nd/4.0/" target="_blank" rel="noopener noreferrer">
+                <img src="public/by-nd.png" alt="Creative Commons BY-ND 4.0 License" style="height:16px; vertical-align:middle;"> Licensed under CC BY-ND 4.0
+            </a>
+        </div>
     </footer>
 </body>
 
